<resources>
    <string name="app_name">MyPokedex</string>
    <string name="app_information">Sobre o app</string>
    <string name="home">Início</string>
    <string name="search">Buscar</string>
    <string name="about">Sobre</string>
    <string name="unknown_pokemon">Quem é esse pokemon?</string>
    <string name="app_developer">Powered by H. Jordan</string>
    <string name="pokemon_id">#%1$04d</string>
    <string name="poke_search_error">"Error search data from server"</string>
    <string name="types">Tipo(s) </string>
    <string name="description">Descrição</string>

    <string name="about_name">Nome: %1$s</string>
    <string name="about_id">Id: %1$d</string>
    <string name="about_height">Altura: %1$.2f m</string>
    <string name="about_weight">Peso: %1$d kg</string>
    <string name="about_habitat">Habitat: %1$s</string>

    <string name="stats">Status</string>

    <string name="hp">HP: %1$d</string>
    <string name="attack">Attack: %1$d</string>
    <string name="defense">Defense: %1$d</string>
    <string name="special_attack">Sp. Atk: %1$d</string>
    <string name="special_defense">Sp. Def: %1$d</string>
    <string name="speed">Speed: %1$d</string>

    <string name="weaknesses">Fraquezas</string>
    <string name="evolutions">Evoluções</string>
    <string name="unknown">Desconhecido</string>

    <string name="about_title">SOBRE</string>
    <string name="types_title">TIPOS</string>
    <string name="description_title">DESCRIÇÃO</string>
    <string name="stats_title">STATUS</string>
    <string name="weaknesses_title">FRAQUEZAS</string>
    <string name="evolutions_title">EVOLUÇÕES</string>
    <string name="size_dmg">%1$sx</string>
    <string name="evolution_id">ID: %1$d</string>
    <string name="app_about_description">MyPokedex é um app que exibe os dados de 1000 pokemons diferentes da franquia Pokemon da Nintendo, ele possui um mecanismo de pesquisa para facilitar a busca por um pokemon específico, além de possuir um jogo onde o usuário deve descobrir o nome do pokemon pela sua imagem em um fundo preto, confira o projeto no github:</string>
    <string name="build_version">MyPokedex v%1$s</string>
    <string name="unknown_title">Pokemon ?</string>
    <string name="send">Enviar</string>
    <string name="empty_edit_text_unknown">Informe o nome do pokemon</string>
    <string name="unknown_success">Parabéns, você acertou o pokemon!</string>
    <string name="unknown_error">Você errou, não foi dessa vez!</string>
    <string name="auto_complete_hint">Digite o nome do pokemon</string>
</resources>