<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/home_fragment"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item android:id="@+id/unknown_pokemon_fragment"
            android:title="@string/unknown_pokemon"
            android:icon="@drawable/unknown_quiz"/>

        <item android:title="@string/about">
            <menu>
                <item android:title="@string/app_information"
                    android:icon="@drawable/info"
                    android:id="@+id/about_fragment"/>
            </menu>
        </item>
    </group>

</menu>