<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/details_about_title"
        style="@style/titles_poke_details"
        android:text="@string/about"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/about_name"
        android:text="@string/about_name"
        style="@style/about_text_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_about_title"/>

    <TextView
        android:id="@+id/about_id"
        android:text="@string/about_id"
        style="@style/about_text_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_name"/>

    <TextView
        android:id="@+id/about_height"
        android:text="@string/about_height"
        style="@style/about_text_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_id"/>

    <TextView
        android:id="@+id/about_weight"
        android:text="@string/about_weight"
        style="@style/about_text_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_height"/>

    <TextView
        android:id="@+id/about_habitat"
        android:text="@string/about_habitat"
        style="@style/about_text_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_weight"/>

    <ImageView
        android:id="@+id/details_primary_type"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/about_habitat"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/grass_type" />

    <ImageView
        android:id="@+id/details_second_type"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@id/details_primary_type"
        app:layout_constraintStart_toEndOf="@id/details_primary_type"
        tools:src="@drawable/poison_type" />




</androidx.constraintlayout.widget.ConstraintLayout>
