<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/unknown_background"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/layout_unknown"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/unknown_poke_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/unknown_title"
            android:textColor="@color/yellow"
            android:textSize="46sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/layout_image_unknown"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/unknown_image_bg">

            <ImageView
                android:id="@+id/unknown_image"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/poke3"
                android:visibility="gone"
                tools:visibility="visible" />

            <ProgressBar
                android:id="@+id/unknown_progress"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/blue_500"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>


        <AutoCompleteTextView
            android:id="@+id/auto_complete_text_unknown"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:maxLength="20"
            android:background="@drawable/shape_edit_unknown"
            android:hint="@string/auto_complete_hint"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/layout_image_unknown"
            app:layout_constraintStart_toStartOf="@id/layout_image_unknown"
            app:layout_constraintTop_toBottomOf="@id/layout_image_unknown" />

        <Button
            android:id="@+id/button_send_unknown"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/shape_button_unknown"
            android:text="@string/send" />


    </LinearLayout>

</ScrollView>
